force-app/main/default/objects/Opportunity/fields/Negative_Consequences__c.field-meta.xml
<CustomField>
    <fullName>Negative_Consequences__c</fullName>
    <description>The bad things that result from the Before Scenarios (revenue, cost, or risk related).</description>
    <inlineHelpText>The bad things that result from the Before Scenarios (revenue, cost, or risk related).</inlineHelpText>
    <label>Negative Consequences</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>