force-app/main/default/objects/Opportunity/fields/Next_Step_History__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_History__c</fullName>
    <label>Next Step - History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>