force-app/main/default/objects/Opportunity/fields/Operational_Value_Levers__c.field-meta.xml
<CustomField>
    <fullName>Operational_Value_Levers__c</fullName>
    <label>Operational Value Levers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>