force-app/main/default/objects/Opportunity/fields/Opp_CSM__c.field-meta.xml
<CustomField>
    <fullName>Opp_CSM__c</fullName>
    <description>Pulls CSM from the Account</description>
    <formula>Account.Customer_Success_Manager__r.FirstName &amp; &quot; &quot; &amp;  Account.Customer_Success_Manager__r.LastName</formula>
    <label>Opportunity CSM</label>
    <type>Text</type>
</CustomField>