force-app/main/default/objects/Opportunity/fields/Opp_Global_Region__c.field-meta.xml
<CustomField>
    <fullName>Opp_Global_Region__c</fullName>
    <formula>Account.Global_Region__c</formula>
    <label>Opp Global Region</label>
    <type>Text</type>
</CustomField>