force-app/main/default/objects/Opportunity/fields/Opportunity_Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner_Manager__c</fullName>
    <formula>Partner_Accounts__r.Owner.FirstName &amp;&quot; &quot;&amp;  Partner_Accounts__r.Owner.LastName</formula>
    <label>Opportunity Partner Manager</label>
    <type>Text</type>
</CustomField>