force-app/main/default/objects/Opportunity/fields/Opportunity_Validated__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box needs to be checked to move an Opportunity to closed won.</description>
    <inlineHelpText>This box needs to be checked to move an Opportunity to closed won.</inlineHelpText>
    <label>Opportunity Validated?</label>
    <type>Checkbox</type>
</CustomField>