force-app/main/default/objects/Opportunity/fields/Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process__c</fullName>
    <description>Link to Mutual Action Plans</description>
    <inlineHelpText>Please add a link to your Mutual Action Plan for the deal. 

The Mutual Action Plan should detail the process and timeline for getting the necessary approvals and signatures including the owner for each step in the process.</inlineHelpText>
    <label>Paper Process</label>
    <type>Url</type>
</CustomField>