force-app/main/default/objects/Opportunity/fields/Paper_Process_Level_of_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process_Level_of_Confidence__c</fullName>
    <description>Notes the AEs level of confidence on the Paper Process for the deal</description>
    <inlineHelpText>Please note the level of confidence you have on the Paper Process/Mutual Action Plan</inlineHelpText>
    <label>Paper Process - Level of Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Confidence</valueSetName>
    </valueSet>
</CustomField>