force-app/main/default/objects/Opportunity/fields/Partner_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please put the Partner Account that either sourced or helped influence the Opportunity</inlineHelpText>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Account with the &quot;type&quot; of Partner</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner Accounts)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>