force-app/main/default/objects/Opportunity/fields/Partner_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Partner_Revenue_Share__c</fullName>
    <inlineHelpText>Input the % that is due to the Partner on this deal</inlineHelpText>
    <label>Partner % Revenue Share</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>