force-app/main/default/objects/Opportunity/fields/Partner_type__c.field-meta.xml
<CustomField>
    <fullName>Partner_type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>CoSelling</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>CoSelling + Implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>