force-app/main/default/objects/Opportunity/fields/Positive_Business_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Positive_Business_Outcomes__c</fullName>
    <description>The good things (business performance improvements) that result from the After Scenarios (revenue, cost, or risk related).</description>
    <inlineHelpText>The good things (business performance improvements) that result from the After Scenarios (revenue, cost, or risk related).</inlineHelpText>
    <label>Positive Business Outcomes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>