force-app/main/default/objects/Opportunity/fields/Presales_Close_Cases__c.field-meta.xml
<CustomField>
    <fullName>Presales_Close_Cases__c</fullName>
    <inlineHelpText>CXampo de control para indicar la cantidad de casos que han sido atendidos por preventa para la oportunidad</inlineHelpText>
    <label>Presales Close Cases</label>
    <summaryFilterItems>
        <field>Use_Case__c.Presales__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Use_Case__c.Status__c</field>
        <operation>equals</operation>
        <value>Close</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Use_Case__c.Viability__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Use_Case__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>