force-app/main/default/objects/Opportunity/fields/PreSales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>PreSales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please note the PreSales Engineer assigned to the Opportunity</inlineHelpText>
    <label>PreSales Engineer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e3i000000UxPs</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>