force-app/main/default/objects/Opportunity/fields/Presales_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Presales_Open_Cases__c</fullName>
    <inlineHelpText>Campo de control para indicar la cantidad de casos de uso pendientes de atención por parte de preventa</inlineHelpText>
    <label>Presales Open Cases</label>
    <summaryFilterItems>
        <field>Use_Case__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Use_Case__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>