force-app/main/default/objects/Opportunity/fields/Presales_Rejected_Cases__c.field-meta.xml
<CustomField>
    <fullName>Presales_Rejected_Cases__c</fullName>
    <label>Presales Rejected Cases</label>
    <summaryFilterItems>
        <field>Use_Case__c.Presales__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Use_Case__c.Status__c</field>
        <operation>equals</operation>
        <value>Close</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Use_Case__c.Viability__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryForeignKey>Use_Case__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>