force-app/main/default/objects/Opportunity/fields/PreSales_Request__c.field-meta.xml
<CustomField>
    <fullName>PreSales_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AEs check the box when they want to request help from the PreSales team</description>
    <inlineHelpText>AEs check the box when they want to request help from the PreSales team, the box can only be checked once</inlineHelpText>
    <label>PreSales Request</label>
    <type>Checkbox</type>
</CustomField>