force-app/main/default/objects/Opportunity/fields/PreSales_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>PreSales_Request_Date__c</fullName>
    <description>Shows the date when the PreSales Request was executed</description>
    <inlineHelpText>Shows the date when the PreSales Request was executed</inlineHelpText>
    <label>PreSales Request Date</label>
    <type>Date</type>
</CustomField>