force-app/main/default/objects/Opportunity/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <inlineHelpText>Shows the previous stage the Opportunity was in</inlineHelpText>
    <label>Previous Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>