force-app/main/default/objects/Opportunity/fields/Proof_of_Concept_Used__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Concept_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre Sales will check this box if a Proof of Concept was used for the Opportunity</description>
    <inlineHelpText>Pre Sales will check this box if a Proof of Concept was used for the Opportunity</inlineHelpText>
    <label>Proof of Concept Used?</label>
    <type>Checkbox</type>
</CustomField>