force-app/main/default/objects/Opportunity/fields/Proof_Points__c.field-meta.xml
<CustomField>
    <fullName>Proof_Points__c</fullName>
    <description>Verifiable evidence that Simetrik can satisfy the Decision Criteria and deliver on the agreed Positive Business Outcomes</description>
    <inlineHelpText>Verifiable evidence that Simetrik can satisfy the Decision Criteria and deliver on the agreed Positive Business Outcomes</inlineHelpText>
    <label>Proof Points</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>