force-app/main/default/objects/Opportunity/fields/Prospection_List__c.field-meta.xml
<CustomField>
    <fullName>Prospection_List__c</fullName>
    <label>Prospection List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMIS list</fullName>
            </value>
            <value>
                <fullName>Crunchbase list</fullName>
            </value>
            <value>
                <fullName>Referral list</fullName>
            </value>
            <value>
                <fullName>Sales list</fullName>
            </value>
            <value>
                <fullName>Web/Demo</fullName>
            </value>
            <value>
                <fullName>Inverstor</fullName>
            </value>
            <value>
                <fullName>Third Parties</fullName>
            </value>
            <value>
                <fullName>LinkedIn List</fullName>
            </value>
            <value>
                <fullName>LATAM TAM 2022</fullName>
            </value>
            <value>
                <fullName>CA BD Andres Fehrmann</fullName>
            </value>
            <value>
                <fullName>CR BD Andres Fehrmann</fullName>
            </value>
            <value>
                <fullName>BR Crunchbase List</fullName>
            </value>
            <value>
                <fullName>CHL Fintech Forum</fullName>
            </value>
            <value>
                <fullName>ARG Fintech Forum</fullName>
            </value>
            <value>
                <fullName>MX Crunchbase List</fullName>
            </value>
            <value>
                <fullName>CO Colombia Fintech</fullName>
            </value>
            <value>
                <fullName>CO Asobancaria</fullName>
            </value>
            <value>
                <fullName>CO Camara de Comercio</fullName>
            </value>
            <value>
                <fullName>LATAM Fintech Forum Channel</fullName>
            </value>
            <value>
                <fullName>Agency List</fullName>
            </value>
            <value>
                <fullName>SAP List Channel</fullName>
            </value>
            <value>
                <fullName>BR_Febrabantech</fullName>
                <isActive>false</isActive>
                <label>BR_Febrabantech</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>