force-app/main/default/objects/Opportunity/fields/PryQuote__c.field-meta.xml
<CustomField>
    <fullName>PryQuote__c</fullName>
    <label>PryQuote</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>