force-app/main/default/objects/Opportunity/fields/Purchasing_Process__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Process__c</fullName>
    <label>Purchasing Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase order</fullName>
            </value>
            <value>
                <fullName>Direct hire</fullName>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>