force-app/main/default/objects/Opportunity/fields/Real_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Real_Close_Date__c</fullName>
    <inlineHelpText>Record the actual date the business was closed with the customer</inlineHelpText>
    <label>Real Close Date</label>
    <type>Date</type>
</CustomField>