force-app/main/default/objects/Opportunity/fields/Recoinciliation_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Recoinciliation_Challenges__c</fullName>
    <description>Pain points, challenges during recoinciliations process</description>
    <inlineHelpText>Pain points, challenges during recoinciliations process</inlineHelpText>
    <label>Reconciliation Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>