force-app/main/default/objects/Opportunity/fields/Recoinciliation_Sources__c.field-meta.xml
<CustomField>
    <fullName>Recoinciliation_Sources__c</fullName>
    <description>What are the sources of information that the client needs to configure their reconciliations? (Fuentes)</description>
    <inlineHelpText>What are the sources of information that the client needs to configure their reconciliations? (Fuentes)</inlineHelpText>
    <label>Reconciliation Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>