force-app/main/default/objects/Opportunity/fields/Required_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Required_Capabilities__c</fullName>
    <description>The minimum requirements to achieve the future state and avoid the Negative Consequences.</description>
    <inlineHelpText>The minimum requirements to achieve the future state and avoid the Negative Consequences</inlineHelpText>
    <label>Required Capabilities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>