force-app/main/default/objects/Opportunity/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <formula>TEXT( Account.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Type</label>
    <type>Text</type>
</CustomField>