force-app/main/default/objects/Opportunity/fields/RevOps_Close_Won_Approval__c.field-meta.xml
<CustomField>
    <fullName>RevOps_Close_Won_Approval__c</fullName>
    <businessOwnerUser>karen.cortes@simetrik.com</businessOwnerUser>
    <description>Date when all requirements were met and verified for Commission Payout</description>
    <inlineHelpText>RevOps use only</inlineHelpText>
    <label>RevOps Closed Won Approved</label>
    <type>Date</type>
</CustomField>