force-app/main/default/objects/Opportunity/fields/RFP_Request__c.field-meta.xml
<CustomField>
    <fullName>RFP_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AEs check the box when they want to request help for an RFP</description>
    <inlineHelpText>AEs check the box when they want to request help for an RFP</inlineHelpText>
    <label>RFP Request</label>
    <type>Checkbox</type>
</CustomField>