force-app/main/default/objects/Opportunity/fields/RFP_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Request_Date__c</fullName>
    <description>Shows the date when the RFP Request was executed</description>
    <inlineHelpText>Shows the date when the RFP Request was executed</inlineHelpText>
    <label>RFP Request Date</label>
    <type>Date</type>
</CustomField>