force-app/main/default/objects/Opportunity/fields/SaaS_MRR__c.field-meta.xml
<CustomField>
    <fullName>SaaS_MRR__c</fullName>
    <inlineHelpText>SaaS MRR ONLY</inlineHelpText>
    <label>SaaS MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>