force-app/main/default/objects/Opportunity/fields/Second_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Second_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second competitor on deal</description>
    <inlineHelpText>Note who is behind the top competitor on the opportunity</inlineHelpText>
    <label>Second Competitor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Accounts tagged as &quot;Competitor&quot; can be added.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Second Competitor)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>