force-app/main/default/objects/Opportunity/fields/Security_Approval__c.field-meta.xml
<CustomField>
    <fullName>Security_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Approval</label>
    <type>Checkbox</type>
</CustomField>