force-app/main/default/objects/Opportunity/fields/Security_Obs__c.field-meta.xml
<CustomField>
    <fullName>Security_Obs__c</fullName>
    <label>Security Obs.</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>