force-app/main/default/objects/Opportunity/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>The sum of all non-subscription product values</description>
    <inlineHelpText>Sum of all services / one-time revenue</inlineHelpText>
    <label>Services</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>