force-app/main/default/objects/Opportunity/fields/SignContact__c.field-meta.xml
<CustomField>
    <fullName>SignContact__c</fullName>
    <label>SignContact</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>