force-app/main/default/objects/Opportunity/fields/Simetrik_s_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Simetrik_s_Value_Proposition__c</fullName>
    <inlineHelpText>Describe our value proposition, the solution we are offering and how we are impacting our customer</inlineHelpText>
    <label>Simetrik&apos;s Value Proposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>