force-app/main/default/objects/Opportunity/fields/Solution_Design_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Document_Link__c</fullName>
    <inlineHelpText>Pre Sales can add a link to their Solution Design Document here</inlineHelpText>
    <label>Solution Design Document Link</label>
    <type>Url</type>
</CustomField>