force-app/main/default/objects/Opportunity/fields/Stage_0_Entrance_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_0_Entrance_Date__c</fullName>
    <description>Includes stamped stage 0 entrance date</description>
    <label>Stage 0 - Entrance Date</label>
    <type>Date</type>
</CustomField>