force-app/main/default/objects/Opportunity/fields/Stage_0_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_0_Exit_Date__c</fullName>
    <description>Includes stamped stage 0 exit date</description>
    <label>Stage 0 - Exit Date</label>
    <type>Date</type>
</CustomField>