force-app/main/default/objects/Opportunity/fields/Stage_2_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_2_Exit_Date__c</fullName>
    <label>Stage 2 - Exit Date</label>
    <type>Date</type>
</CustomField>