force-app/main/default/objects/Opportunity/fields/Stage_3_Entrance_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_3_Entrance_Date__c</fullName>
    <label>Stage 3 - Entrance Date</label>
    <type>Date</type>
</CustomField>