force-app/main/default/objects/Opportunity/fields/Stage_4_Entrance_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_4_Entrance_Date__c</fullName>
    <label>Stage 4 - Entrance Date</label>
    <type>Date</type>
</CustomField>