force-app/main/default/objects/Opportunity/fields/Tactical_Value_Levers__c.field-meta.xml
<CustomField>
    <fullName>Tactical_Value_Levers__c</fullName>
    <label>Tactical Value Levers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>