force-app/main/default/objects/Opportunity/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <formula>TRIM( Account.Tax_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax ID</label>
    <type>Text</type>
</CustomField>