force-app/main/default/objects/Opportunity/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <inlineHelpText>Sum of subscription revenue during the entire contract term</inlineHelpText>
    <label>TCV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>