force-app/main/default/objects/Opportunity/fields/Territorio__c.field-meta.xml
<CustomField>
    <fullName>Territorio__c</fullName>
    <formula>TEXT( Account.Territory__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory</label>
    <type>Text</type>
</CustomField>