force-app/main/default/objects/Opportunity/fields/ThirdPartyName__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyName__c</fullName>
    <label>ThirdPartyName</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Camp_CO_2022</fullName>
            </value>
            <value>
                <fullName>Crosstechpayment_BR_2022</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>Estratego</fullName>
            </value>
            <value>
                <fullName>FintechAmericas_MI_2022</fullName>
            </value>
            <value>
                <fullName>FintechForum_CH_2022</fullName>
            </value>
            <value>
                <fullName>IVA Involved</fullName>
            </value>
            <value>
                <fullName>PaymentsDays_ARG_2022</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>