force-app/main/default/objects/Opportunity/fields/Time_For_Business_Months__c.field-meta.xml
<CustomField>
    <fullName>Time_For_Business_Months__c</fullName>
    <label>Time For Business (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>