force-app/main/default/objects/Opportunity/fields/Timing_date__c.field-meta.xml
<CustomField>
    <fullName>Timing_date__c</fullName>
    <inlineHelpText>Date to contact the client again</inlineHelpText>
    <label>Estimated resolution date</label>
    <type>Date</type>
</CustomField>