force-app/main/default/objects/Opportunity/fields/Top_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Top_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Top competitor on the deal</description>
    <inlineHelpText>Note the top competitor on the deal</inlineHelpText>
    <label>Top Competitor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Accounts tagged as &quot;Competitor&quot; can be added.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Competitor 1)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>