force-app/main/default/objects/Opportunity/fields/Total_Contract_Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Duration_in_Months__c</fullName>
    <description>Total Contract Duration for a multi-year contract, in months.</description>
    <inlineHelpText>Total Contract Duration for a multi-year contract, in months.</inlineHelpText>
    <label>Total Contract Duration in Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>